enforce-resource-requests-and-limits/workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-deployment
  namespace: rhacs-test-policies
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: main-app
        image: quay.io/busybox:latest
