enforce-resource-requests-and-limits/policy.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: enforce-cpu-and-memory-requests-and-limits
  namespace: rhacs-operator
spec:
  policyName: Enforces the use of CPU and Memory Limts and Requests
  description: Requires all containers in a deployment to specify explicit CPU and Memory requests and limits (non-zero values).
  rationale: Setting resource requests and limits prevents resource contention and ensures reliable scheduling within the cluster. Missing or zero limits can lead to pod throttling or node instability due to resource starvation or over-commitment.
  remediation: Specify non-zero CPU and Memory limits and requests for all containers in the deployment manifest.
  severity: MEDIUM_SEVERITY
  categories:
    - Security Best Practices
    - Configuration Management
  lifecycleStages:
    - DEPLOY
  scope:
    - namespace: rhacs-test-policies
  enforcementActions:
    - FAIL_DEPLOYMENT_CREATE_ENFORCEMENT
    - FAIL_DEPLOYMENT_UPDATE_ENFORCEMENT
    - SCALE_TO_ZERO_ENFORCEMENT
    - UNSATISFIABLE_NODE_CONSTRAINT_ENFORCEMENT
  policySections:
    - sectionName: Check for Missing or Zero Requests/Limits
      policyGroups:
        - fieldName: Container CPU Request
          values:
            - value: "0"
        - fieldName: Container CPU Limit
          values:
            - value: "0"
        - fieldName: Container Memory Request
          values:
            - value: "0"
        - fieldName: Container Memory Limit
          values:
            - value: "0"
